--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,11 +1,134 @@
-/*================================================================================
-	Item Name: Vuexy - Vuejs, HTML & Laravel Admin Dashboard Template
-	Version: 2.0
-	Author: PIXINVENT
-	Author URL: http://www.themeforest.net/user/pixinvent
-================================================================================
+/* Destop CSS */
+/* navbar */
+body {
+    background-color: #ececec;
+    /* background-color: #f5f5f5; */
+}
 
-NOTE:
-------
-PLACE HERE YOUR OWN SCSS CODES AND IF NEEDED, OVERRIDE THE STYLES FROM THE OTHER STYLESHEETS.
-WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BETTER LIKE THIS.  */
+.bg-primary,
+.btn-primary {
+    background-color: #ff6700 !important;
+    border-color: #ff6700 !important;
+}
+
+.form-custom {
+    border: none;
+}
+
+/* bootstrap btn */
+.btn-primary {
+    color: #fff;
+    background-color: #ff6700;
+    border-color: #ff6700;
+}
+
+nav .btn {
+    border-radius: 2px;
+}
+
+nav a {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: small;
+}
+
+.text-large {
+    font-size: 1.5em;
+}
+
+.banner-wrapper {
+    display: flex;
+    min-height: 235px;
+    max-height: 235px;
+}
+
+.full-banner {
+    display: flex;
+    min-height: 235px;
+    max-height: 235px;
+    flex-shrink: 1;
+    flex-grow: 2;
+    flex-basis: 0;
+}
+
+.child-banner {
+    flex-direction: column;
+    flex-grow: 1;
+    display: flex;
+    margin-left: 0.3125rem;
+}
+
+.child {
+    flex: 1 1 50%;
+    display: flex;
+}
+
+.child-2 {
+    margin-top: 0.3125rem;
+}
+
+.banner {
+    border-radius: 5px;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.section-banner,
+.section-category {
+    padding-top: 30px;
+}
+
+.containers {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px !important;
+}
+
+.category-header {
+    font-size: 16px;
+    padding: 15px;
+    font-weight: 500;
+    border-right: 1px solid rgba(0, 0, 0, 0.05);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.category-content ul li {
+    list-style: none;
+}
+
+.category-wrapper {
+    border-left: 1px solid rgba(0, 0, 0, 0.05);
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    margin-bottom: 100px;
+}
+
+.category-content ul {
+    padding: 0;
+    margin-bottom: unset;
+}
+
+.category-item:hover {
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    cursor: pointer;
+}
+
+.category-item {
+    padding: 10px;
+    border-right: 1px solid rgba(0, 0, 0, 0.05);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    text-align: center;
+}
+
+.category-title {
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.category-image {
+    max-height: 200px;
+    min-height: 200px;
+    width: 150px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+}
