--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,8 +1,8 @@
 /* Destop CSS */
 /* navbar */
 body {
-    background-color: #ececec;
-    /* background-color: #f5f5f5; */
+    /* background-color: #ececec; */
+    background-color: #f5f5f5;
 }
 
 .bg-primary,
@@ -81,6 +81,13 @@ nav a {
 .section-category {
     padding-top: 30px;
 }
+
+.section-banner {
+    padding-bottom: 30px;
+    background-color: white;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+
 .section-product {
     margin-bottom: 100px;
 }
@@ -106,7 +113,7 @@ nav a {
 .category-wrapper {
     border-left: 1px solid rgba(0, 0, 0, 0.05);
     border-top: 1px solid rgba(0, 0, 0, 0.05);
-    margin-bottom: 100px;
+    margin-bottom: 20px;
 }
 
 .category-content ul {
@@ -124,11 +131,21 @@ nav a {
     border-right: 1px solid rgba(0, 0, 0, 0.05);
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 1;
+    height: 100%;
 }
 
 .category-title {
     font-size: 14px;
     margin-bottom: 10px;
+}
+
+.category-header a {
+    text-decoration: none;
+    font-size: small;
+    font-weight: 400;
 }
 
 .category-image {
@@ -140,25 +157,97 @@ nav a {
     align-items: center;
 }
 
+.best-seller-image {
+    min-height: 200px;
+    max-height: 200px;
+    width: 178.9px;
+    position: relative;
+}
+
+.best-seller-image img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.best-seller-title {
+    font-size: 18px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-weight: 500;
+    color: #444444;
+}
+
+.best-seller-badge {
+    position: absolute;
+    top: -10px;
+    left: -5px;
+}
+
+.best-seller-badge img {
+    width: 50px;
+    height: auto;
+}
+
 .product-wrapper {
     display: flex;
-    margin-bottom: 5px;
+    min-height: calc(100vh - 11.25rem);
+    flex-wrap: wrap;
+    align-content: flex-start;
+    padding-top: 0.3125rem;
+
 }
 
 .product-image {
-    width: 195.7px;
+    width: 100%;
 }
 
 .product-image img {
     width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.product-action {
+    /* display: none; */
+    position: absolute;
+    width: 100%;
+    bottom: -40px;
+    left: 0px;
+    z-index: 100;
+    border: 1px solid #000000;
 }
 
 .product-items {
-    flex-shrink: 1;
+    /* background-color: white; */
+    /* margin-right: 5px; */
+    /* flex-grow: 1; */
+    /* display: flex; */
+    /* height: 100%; */
+    /* flex-direction: column; */
+    box-sizing: border-box;
+    width: 16.6%;
+    padding: 0 .3125rem;
+    margin-bottom: 10px;
+    transition: 0.3s;
+}
+
+.item-wrapper {
+    border: 1px solid #ff660000;
+    height: 100%;
+    box-sizing: border-box;
     background-color: white;
-    margin-right: 5px;
     display: flex;
+    position: relative;
+    top: 0px;
     flex-direction: column;
+    transition: top ease 0.3s;
+}
+
+.product-items:hover .item-wrapper {
+    border: 1px solid #ff6700;
+    cursor: pointer;
+    top: -5px;
 }
 
 .product-info {
@@ -170,7 +259,6 @@ nav a {
 
 .product-discount {
     margin-bottom: 5px;
-    margin-top: 3px;
     font-size: 10px;
     font-weight: 500;
     color: white;
@@ -192,4 +280,24 @@ nav a {
 .product-title,
 .product-sale {
     font-size: 12px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical
+}
+
+.nav-link,
+.nav-link:hover {
+    color: #ff6700;
+    font-size: 16px;
+    padding: 20px 30px;
+    font-weight: 500;
+}
+
+nav .active {
+    border-bottom: 5px solid #ff6700;
+    color: #ff6700 !important;
 }
